--- a/package.json
+++ b/package.json
@@ -1,26 +1,30 @@
 {
-  "name": "@geoblocks/mapboxlayer",
+  "name": "@geoblocks/mapboxlayer-legacy",
   "version": "0.0.2",
   "geoblocks_src": "src/MapBoxLayer.js",
-  "main": "dist/lib/mapboxlayer.js",
-  "module": "dist/lib/mapboxlayer.js",
-  "files": ["/src", "/dist/lib"],
+  "main": "dist/lib/mapboxlayer-legacy.js",
+  "module": "dist/lib/mapboxlayer-legacy.js",
+  "files": [
+    "/src",
+    "/dist/lib"
+  ],
   "scripts": {
     "build-api": "microbundle --format es --entry src/MapBoxLayer.js",
-    "build-demo": "parcel build --out-dir dist examples/*.html --public-url ./",
+    "build-demo": "parcel build examples/*.html --public-url ./",
     "build": "npm run build-api; npm run build-demo",
     "lint": "eslint src/ examples",
-    "start": "parcel serve --port 8080 --log-level 4 examples/*.html",
+    "start": "parcel serve --port 8080 examples/*.html",
     "gh-pages": "rm -rf dist && npm run build && gh-pages -d dist"
   },
   "browserslist": [
     "last 1 Edge version"
   ],
-  "dependencies": {
-    "mapbox-gl": "^1.3.1",
-    "ol": "^6.0.0-dev.4"
+  "peerDependencies": {
+    "mapbox-gl": "~1.0"
   },
   "devDependencies": {
+    "mapbox-gl": "^1.3.1",
+    "ol": "5.3.3",
     "eslint": "^6.4.0",
     "gh-pages": "^2.1.1",
     "microbundle": "v0.11.0",
