--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,6 +1,6 @@
 name: CI build and push
 
-on: [push]
+on: [push, pull_request]
 
 jobs:
   build:
@@ -17,8 +17,6 @@ jobs:
         npm install
         npm run lint
         npm run build
-      env:
-        CI: true
     - name: deploy gh-pages on pushes
       if: github.event == 'push'
       run: npm run gh-pages
